2012-07-23  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/cdt/autotools/tests/UpdateConfigureTest.java: New test.

2012-03-30  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/cdt/autotools/tests/ProjectTools.java
	(setup): Fix to return false when Workbench is null.

2012-03-30  Jeff Johnston  <jjohnstn@redhat.com>

	* zip/project2.zip: Fix autogen.sh to make the configure script executable.
	
2012-03-29  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/cdt/autotools/tests/ProjectTools.java (build): Refresh the workspace root so resource tests
	will work consistently.

2012-01-03  Jeff Johnston  <jjohnstn@redhat.com>

	Refactor to org.eclipse.cdt.autotools.tests.

2011-06-16  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/tests/autoconf/BaseParserTest.java (parseNoHandlers):
	Revert previous fix as it is no longer needed.

2011-06-16  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/tests/autoconf/BaseParserTest.java (parseNoHandlers): 
	Fix to new parser API.

2011-05-19  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/tests/editors/AutomakeColourizationTests.java (setUp): Perform
	any editor or active page manipulation within Display thread.
	* src/org/eclipse/linuxtools/cdt/autotools/tests/editors/AutomakeTextHoverTest.java (setUp): Ditto.
	(testGetHoverForMacro2): Ditto.
	(testGetHoverForMacro1): Ditto.
	(testGetHoverInfoForTargetDependencies): Ditto.
	(testGetHoverInfoForTargetDependency): Ditto.
	(testGetHoverInfoTargetName2): Ditto.
	(testGetHoverInfoTargetName1): Ditto.
	* src/org/eclipse/linuxtools/cdt/autotools/tests/editors/AutomakeEditorTests.java (testAutomakeEditorAssociation): Ditto.

2010-11-18  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/cdt/autotools/tests/ProjectTools.java (createProject): Try creating a project