@@ -26,6 +26,7 @@ public class AllAutotoolsTests {
 		suite.addTestSuite(AutotoolsProjectNatureTest.class);
 		suite.addTestSuite(AutotoolsProjectTest1.class);
 		suite.addTestSuite(AutotoolsProjectTest2.class);
+		suite.addTestSuite(UpdateConfigureTest.class);
 		suite.addTest(AutoconfTests.suite());
 		suite.addTest(EditorTests.suite());
 		//$JUnit-END$
